--- a/scss/general.scss
+++ b/scss/general.scss
@@ -13,7 +13,7 @@ body {
 }
 
 section {
-    overflow-x: hidden;
+
 }
 
 .flex {
